tests/errors/conflicting-use.expect
---STDERR---
error: Cannot prove |G - G+2| >= 3. Instance has conflicting uses
  ┌─ tests/errors/conflicting-use.fil:5:3
  │
5 │   m0 := M<G>(10, 20);
  │   ^^^^^^^^^^^^^^^^^^^ Invocation 1
6 │   m1 := M<G+2>(30, 40);
  │   --------------------- Invocation 2

